--- a/HomeServiceBackend/appsettings.Production.json
+++ b/HomeServiceBackend/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=192.168.100.40;Port=5432;Database=homeservicedb;Username=postgres;CommandTimeout=300;Password=672412Aa",
+    "DefaultConnection": "Host=192.168.100.40;Port=5432;Database=homeservicedb;Username=postgres;CommandTimeout=300;Password=672412Aa"
   },
   "Logging": {
     "LogLevel": {
@@ -8,6 +8,5 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
