изменил контроллер аналитики

--- a/HomeServiceBackend/appsettings.Development.json
+++ b/HomeServiceBackend/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=homeservicedb;Username=postgres;CommandTimeout=300;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
