--- a/HomeServiceBackend/HomeServiceBackend.csproj
+++ b/HomeServiceBackend/HomeServiceBackend.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Stas\Desktop\HomeServiceBackend\HomeServiceBackend\HomeServiceBackend.xml</DocumentationFile>
+    <DocumentationFile>D:\Sourse\GitHub\HomeServiceBackend\HomeServiceBackend\HomeServiceBackend.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
