--- a/HomeServiceBackend/HomeServiceBackend.csproj
+++ b/HomeServiceBackend/HomeServiceBackend.csproj
@@ -8,6 +8,10 @@
     <DocumentationFile>HomeServiceBackend.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>HomeServiceBackend.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
